# kdev-rust

./: CMakeLists.txt  README.md  kdevrustsupport.json  kdevrustsupport.qrc  kdevrustsupport.rc  processdatastream.cpp  processdatastream.h  rustcompilerrunner.cpp  rustcompilerrunner.h  rusthighlighting.cpp  rusthighlighting.h  rustlanguagesupport.cpp  rustlanguagesupport.h  rustparsejob.cpp  rustparsejob.h
codegen/: refactoring.cpp  refactoring.h
duchain/: CMakeLists.txt  builder.cpp  builder.h
duchain/declarations/: rustfunctiondeclaration.cpp  rustfunctiondeclaration.h
duchain/types/: rustarraytype.cpp  rustarraytype.h  rustfunctiontype.cpp  rustfunctiontype.h  rustintegraltype.cpp  rustintegraltype.h  rustpointertype.cpp  rustpointertype.h  rustreferencetype.cpp  rustreferencetype.h  rusttupletype.cpp  rusttupletype.h
settings/: CMakeLists.txt  rustsettingsmanager.cpp  rustsettingsmanager.h
settings/rustsettings/: rustconfig.kcfg  rustconfig.kcfgc  rustconfigskeleton.h  rustsettings.cpp  rustsettings.h  rustsettings.ui
